--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2261,47 +2261,47 @@ body {
 .cid-rkksB50Y6a .card-title B {
   color: #271200;
 }
-.cid-rkIu8tkHNM {
+.cid-rocYxE5vYC {
   padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rkIu8tkHNM .card-box {
+.cid-rocYxE5vYC .card-box {
   padding: 0 2rem;
 }
-.cid-rkIu8tkHNM .mbr-section-btn {
+.cid-rocYxE5vYC .mbr-section-btn {
   padding-top: 1rem;
 }
-.cid-rkIu8tkHNM .mbr-section-btn a {
+.cid-rocYxE5vYC .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-rkIu8tkHNM h4 {
+.cid-rocYxE5vYC h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
   padding-top: 2rem;
 }
-.cid-rkIu8tkHNM p {
+.cid-rocYxE5vYC p {
   margin-bottom: 0;
   text-align: left;
   padding-top: 1.5rem;
 }
-.cid-rkIu8tkHNM .mbr-text {
+.cid-rocYxE5vYC .mbr-text {
   color: #767676;
 }
-.cid-rkIu8tkHNM .card-wrapper {
+.cid-rocYxE5vYC .card-wrapper {
   height: 100%;
   padding-bottom: 2rem;
   background: #ffffff;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-rkIu8tkHNM .card-wrapper:hover {
+.cid-rocYxE5vYC .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-rkIu8tkHNM .card-title B {
+.cid-rocYxE5vYC .card-title B {
   color: #271200;
 }
 .cid-rkrrVC8MmG {
