--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4053,7 +4053,7 @@ body {
 }
 .cid-rod9ynZVtr {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rod9ynZVtr h2 {
@@ -4132,6 +4132,171 @@ body {
 }
 .cid-rod9zE92bM .mbr-text,
 .cid-rod9zE92bM .mbr-section-btn B {
+  color: #271200;
+}
+.cid-rofsK1U5XX {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rofsK1U5XX P {
+  color: #767676;
+}
+.cid-rofsK1U5XX H1 {
+  color: #271200;
+}
+.cid-rofsLrMUBZ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rofsLrMUBZ h2 {
+  text-align: left;
+}
+.cid-rofsLrMUBZ h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rofsLrMUBZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rofsLrMUBZ .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rofsLrMUBZ .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rofsLrMUBZ .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rofsLrMUBZ .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rofsLrMUBZ .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rofsLrMUBZ .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rofsLrMUBZ .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rofsLrMUBZ .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rofsLrMUBZ .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rofsLrMUBZ B {
+  color: #271200;
+}
+.cid-rofsLrMUBZ H4 {
+  color: #271200;
+}
+.cid-rofsLrMUBZ P {
+  color: #271200;
+}
+.cid-rofsM4mijc {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rofsM4mijc h2 {
+  text-align: left;
+}
+.cid-rofsM4mijc h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rofsM4mijc p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rofsM4mijc .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rofsM4mijc .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rofsM4mijc .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rofsM4mijc .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rofsM4mijc .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rofsM4mijc .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rofsM4mijc .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rofsM4mijc .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rofsM4mijc .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rofsM4mijc B {
+  color: #271200;
+}
+.cid-rofsM4mijc H4 {
+  color: #271200;
+}
+.cid-rofsM4mijc P {
+  color: #271200;
+}
+.cid-rofsMICcBV {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rofsMICcBV P {
+  color: #767676;
+}
+.cid-rofsMICcBV .mbr-text,
+.cid-rofsMICcBV .mbr-section-btn B {
   color: #271200;
 }
 .cid-rkkAhIV2Zj .navbar {
