--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4299,6 +4299,100 @@ body {
 .cid-rofsMICcBV .mbr-section-btn B {
   color: #271200;
 }
+.cid-roiDXeXlh5 {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-roiDXeXlh5 P {
+  color: #767676;
+}
+.cid-roiDXeXlh5 H1 {
+  color: #271200;
+}
+.cid-roiDYyXTBz {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-roiDYyXTBz h2 {
+  text-align: left;
+}
+.cid-roiDYyXTBz h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-roiDYyXTBz p {
+  color: #767676;
+  text-align: left;
+}
+.cid-roiDYyXTBz .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-roiDYyXTBz .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-roiDYyXTBz .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-roiDYyXTBz .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-roiDYyXTBz .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-roiDYyXTBz .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-roiDYyXTBz .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-roiDYyXTBz .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-roiDYyXTBz .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-roiDYyXTBz B {
+  color: #271200;
+}
+.cid-roiDYyXTBz H4 {
+  color: #271200;
+}
+.cid-roiDYyXTBz P {
+  color: #271200;
+}
+.cid-roiDZkpNfg {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-roiDZkpNfg P {
+  color: #767676;
+}
+.cid-roiDZkpNfg .mbr-text,
+.cid-roiDZkpNfg .mbr-section-btn B {
+  color: #271200;
+}
 .cid-rkkAhIV2Zj .navbar {
   background: #ffffff;
   transition: none;
