--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2846,7 +2846,7 @@ body {
   padding-top: 1.5rem;
 }
 .cid-rkkqEaZQ8w .mbr-text {
-  color: #767676;
+  color: #271200;
 }
 .cid-rkkqEaZQ8w .card-wrapper {
   height: 100%;
@@ -2860,6 +2860,141 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-rkkqEaZQ8w .card-title {
+  color: #271200;
+}
+.cid-rkkqEaZQ8w .mbr-text B {
+  color: #767676;
+}
+.cid-roljdByESU {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-roljdByESU .card-box {
+  padding: 0 2rem;
+}
+.cid-roljdByESU .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-roljdByESU .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-roljdByESU h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-roljdByESU p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-roljdByESU .mbr-text {
+  color: #271200;
+}
+.cid-roljdByESU .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-roljdByESU .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-roljdByESU .card-title {
+  color: #271200;
+}
+.cid-roljdByESU .mbr-text B {
+  color: #767676;
+}
+.cid-rolnDmr1zP {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rolnDmr1zP .card-box {
+  padding: 0 2rem;
+}
+.cid-rolnDmr1zP .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rolnDmr1zP .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rolnDmr1zP h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rolnDmr1zP p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rolnDmr1zP .mbr-text {
+  color: #767676;
+}
+.cid-rolnDmr1zP .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rolnDmr1zP .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rolnDmr1zP .card-title B {
+  color: #271200;
+}
+.cid-rolnEvP1H0 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rolnEvP1H0 .card-box {
+  padding: 0 2rem;
+}
+.cid-rolnEvP1H0 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rolnEvP1H0 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rolnEvP1H0 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rolnEvP1H0 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rolnEvP1H0 .mbr-text {
+  color: #767676;
+}
+.cid-rolnEvP1H0 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rolnEvP1H0 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rolnEvP1H0 .card-title B {
   color: #271200;
 }
 .cid-rnJyxNyeGK {
