--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1302,11 +1302,31 @@ body {
   background-color: #149dcc;
   color: #ffffff;
 }
-.jq-selectbox .jq-selectbox__trigger-arrow {
-  border-top-color: contrast(currentColor, #000000, #ffffff, 30%);
+.jq-selectbox .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:after,
+.jq-number__spin.plus:after {
+  transition: 0.4s;
+  border-top-color: currentColor;
+  border-bottom-color: currentColor;
 }
-.jq-selectbox:hover .jq-selectbox__trigger-arrow {
+.jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:hover:after,
+.jq-number__spin.plus:hover:after {
   border-top-color: #149dcc;
+  border-bottom-color: #149dcc;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
+  color: #ffffff !important;
+  background-color: #149dcc !important;
+  box-shadow: none!important;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td:hover,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
+  color: #ffffff !important;
+  background: #7f1933 !important;
+  box-shadow: none !important;
 }
 .cid-roukLdvkYR {
   padding-top: 0px;
@@ -1364,6 +1384,35 @@ body {
   color: #271200;
 }
 .cid-rkkCxGeZ45 P {
+  color: #271200;
+}
+.cid-rsIOgedR4k {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rsIOgedR4k h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rsIOgedR4k p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rsIOgedR4k .card-box {
+  padding-top: 2rem;
+}
+.cid-rsIOgedR4k .card-wrapper {
+  height: 100%;
+}
+.cid-rsIOgedR4k B {
+  color: #271200;
+}
+.cid-rsIOgedR4k .card-title B {
+  color: #271200;
+}
+.cid-rsIOgedR4k P {
   color: #271200;
 }
 .cid-rkqwi0a3lm {
@@ -2971,7 +3020,7 @@ body {
   padding-top: 1.5rem;
 }
 .cid-roljdByESU .mbr-text {
-  color: #271200;
+  color: #465052;
 }
 .cid-roljdByESU .card-wrapper {
   height: 100%;
@@ -3500,8 +3549,8 @@ body {
   color: #271200;
 }
 .cid-rnJzuzqyWB {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 15px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-rnJzuzqyWB .line {
@@ -5061,6 +5110,86 @@ body {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-rtiEzpT5WA {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rtiEzpT5WA .card-box {
+  padding: 0 2rem;
+}
+.cid-rtiEzpT5WA .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rtiEzpT5WA .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rtiEzpT5WA h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rtiEzpT5WA p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rtiEzpT5WA .mbr-text {
+  color: #767676;
+}
+.cid-rtiEzpT5WA .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rtiEzpT5WA .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rtiEAb7RQC {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rtiEAb7RQC .card-box {
+  padding: 0 2rem;
+}
+.cid-rtiEAb7RQC .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rtiEAb7RQC .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rtiEAb7RQC h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rtiEAb7RQC p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rtiEAb7RQC .mbr-text {
+  color: #767676;
+}
+.cid-rtiEAb7RQC .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rtiEAb7RQC .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
 .cid-rnJM480phj {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -5554,4 +5683,519 @@ body {
 .cid-rkIzcS1GU6 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-rsIOUrE9Pm .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rsIOUrE9Pm .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rsIOUrE9Pm a {
+  font-style: normal;
+}
+.cid-rsIOUrE9Pm .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rsIOUrE9Pm .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rsIOUrE9Pm .nav-item:focus,
+.cid-rsIOUrE9Pm .nav-link:focus {
+  outline: none;
+}
+.cid-rsIOUrE9Pm .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rsIOUrE9Pm .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rsIOUrE9Pm .menu-logo {
+  margin-right: auto;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rsIOUrE9Pm .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rsIOUrE9Pm .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rsIOUrE9Pm .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rsIOUrE9Pm .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rsIOUrE9Pm .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rsIOUrE9Pm .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rsIOUrE9Pm .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rsIOUrE9Pm .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rsIOUrE9Pm .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rsIOUrE9Pm .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rsIOUrE9Pm .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rsIOUrE9Pm .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rsIOUrE9Pm button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rsIOUrE9Pm nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rsIOUrE9Pm nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rsIOUrE9Pm nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rsIOUrE9Pm nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rsIOUrE9Pm .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rsIOUrE9Pm .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rsIOUrE9Pm .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rsIOUrE9Pm .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rsIOUrE9Pm .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rsIOUrE9Pm .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rsIOUrE9Pm .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rsIOUrE9Pm .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rsIOUrE9Pm .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rsIOUrE9Pm.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rsIOUrE9Pm img {
+    height: 3.8rem !important;
+  }
+  .cid-rsIOUrE9Pm .btn {
+    display: -webkit-flex;
+  }
+  .cid-rsIOUrE9Pm button.navbar-toggler {
+    display: block;
+  }
+  .cid-rsIOUrE9Pm .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rsIOUrE9Pm .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing,
+  .cid-rsIOUrE9Pm .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing .navbar-nav,
+  .cid-rsIOUrE9Pm .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rsIOUrE9Pm .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rsIOUrE9Pm .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rsIOUrE9Pm .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rsIOUrE9Pm .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rsIOUrE9Pm .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rsIOUrE9Pm .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rsIOUrE9Pm .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rsIOUrE9Pm .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rsIOUrE9Pm .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rsIOUrE9Pm .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rsIOUrE9Pm .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rsIOUrE9Pm .nav-link:hover,
+.cid-rsIOUrE9Pm .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-rtiG0KuD5t {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rtiG0KuD5t P {
+  color: #767676;
+}
+.cid-rtiG0KuD5t H1 {
+  color: #271200;
+}
+.cid-rsJLuacIm0 {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-rsJLuacIm0 .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rsJLuacIm0 .section-text {
+  padding: 2rem 0;
+  color: #271200;
+}
+.cid-rsJLuacIm0 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rsJLuacIm0 .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rsIOUv9IJL {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rsIOUv9IJL h2 {
+  text-align: left;
+}
+.cid-rsIOUv9IJL h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rsIOUv9IJL p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rsIOUv9IJL .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rsIOUv9IJL .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rsIOUv9IJL .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rsIOUv9IJL .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rsIOUv9IJL .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rsIOUv9IJL .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rsIOUv9IJL .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rsIOUv9IJL .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rsIOUv9IJL .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rsIOUv9IJL B {
+  color: #271200;
+}
+.cid-rsIOUv9IJL H4 {
+  color: #271200;
+}
+.cid-rsJLQ5A5I0 {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rsJLQ5A5I0 P {
+  color: #767676;
+}
+.cid-rsJLQ5A5I0 .mbr-text,
+.cid-rsJLQ5A5I0 .mbr-section-btn {
+  color: #271200;
 }
