--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2993,95 +2993,6 @@ body {
 .cid-rkkqEaZQ8w .mbr-text B {
   color: #767676;
 }
-.cid-roljdByESU {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-roljdByESU .card-box {
-  padding: 0 2rem;
-}
-.cid-roljdByESU .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-roljdByESU .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-roljdByESU h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-roljdByESU p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-roljdByESU .mbr-text {
-  color: #465052;
-}
-.cid-roljdByESU .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-roljdByESU .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-roljdByESU .card-title {
-  color: #271200;
-}
-.cid-roljdByESU .mbr-text B {
-  color: #767676;
-}
-.cid-rolnDmr1zP {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rolnDmr1zP .card-box {
-  padding: 0 2rem;
-}
-.cid-rolnDmr1zP .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rolnDmr1zP .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-rolnDmr1zP h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rolnDmr1zP p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-rolnDmr1zP .mbr-text {
-  color: #767676;
-}
-.cid-rolnDmr1zP .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rolnDmr1zP .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rolnDmr1zP .card-title B {
-  color: #271200;
-}
 .cid-rolnEvP1H0 {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -5644,45 +5555,28 @@ body {
 .cid-rkkKRtmKrC H2 {
   color: #271200;
 }
-.cid-rkIzcS1GU6 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rtKfH2TaXn {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-rkIzcS1GU6 .card-box {
-  padding: 0 2rem;
+.cid-rtKfH2TaXn .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-rkIzcS1GU6 .mbr-section-btn {
-  padding-top: 1rem;
+.cid-rtKfH2TaXn .section-text {
+  padding: 2rem 0;
 }
-.cid-rkIzcS1GU6 .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
+.cid-rtKfH2TaXn .inner-container {
+  margin: 0 auto;
 }
-.cid-rkIzcS1GU6 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rkIzcS1GU6 p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-rkIzcS1GU6 .mbr-text {
-  color: #767676;
-}
-.cid-rkIzcS1GU6 .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rkIzcS1GU6 .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+@media (max-width: 768px) {
+  .cid-rtKfH2TaXn .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-rsIOUrE9Pm .navbar {
   background: #ffffff;
@@ -6197,5 +6091,245 @@ body {
 }
 .cid-rsJLQ5A5I0 .mbr-text,
 .cid-rsJLQ5A5I0 .mbr-section-btn {
+  color: #271200;
+}
+.cid-rtJvYyhh5O {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtJvYyhh5O h2 {
+  text-align: left;
+}
+.cid-rtJvYyhh5O h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rtJvYyhh5O p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rtJvYyhh5O .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rtJvYyhh5O .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rtJvYyhh5O .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rtJvYyhh5O .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rtJvYyhh5O .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rtJvYyhh5O .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rtJvYyhh5O .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rtJvYyhh5O .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rtJvYyhh5O .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rtJvYyhh5O B {
+  color: #271200;
+}
+.cid-rtJvYyhh5O H4 {
+  color: #271200;
+}
+.cid-rtJx4WooYE {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtJx4WooYE P {
+  color: #767676;
+}
+.cid-rtJx4WooYE .mbr-text,
+.cid-rtJx4WooYE .mbr-section-btn {
+  color: #271200;
+}
+.cid-rtJTIxBFTs {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtJTIxBFTs h2 {
+  text-align: left;
+}
+.cid-rtJTIxBFTs h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rtJTIxBFTs p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rtJTIxBFTs .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rtJTIxBFTs .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rtJTIxBFTs .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rtJTIxBFTs .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rtJTIxBFTs .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rtJTIxBFTs .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rtJTIxBFTs .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rtJTIxBFTs .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rtJTIxBFTs .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rtJTIxBFTs B {
+  color: #271200;
+}
+.cid-rtJTIxBFTs H4 {
+  color: #271200;
+}
+.cid-rtJUEHkLqa {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtJUEHkLqa P {
+  color: #767676;
+}
+.cid-rtJUEHkLqa .mbr-text,
+.cid-rtJUEHkLqa .mbr-section-btn {
+  color: #271200;
+}
+.cid-rtK2aQd50B {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtK2aQd50B h2 {
+  text-align: left;
+}
+.cid-rtK2aQd50B h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rtK2aQd50B p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rtK2aQd50B .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rtK2aQd50B .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rtK2aQd50B .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rtK2aQd50B .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rtK2aQd50B .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rtK2aQd50B .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rtK2aQd50B .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rtK2aQd50B .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rtK2aQd50B .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rtK2aQd50B B {
+  color: #271200;
+}
+.cid-rtK2aQd50B H4 {
+  color: #271200;
+}
+.cid-rtK2biL51A {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rtK2biL51A P {
+  color: #767676;
+}
+.cid-rtK2biL51A .mbr-text,
+.cid-rtK2biL51A .mbr-section-btn {
   color: #271200;
 }
