--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1415,6 +1415,28 @@ body {
 .cid-rsIOgedR4k P {
   color: #271200;
 }
+.cid-ruNjTQidUo {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-ruNjTQidUo P {
+  color: #767676;
+}
+.cid-ruNjL9ptKp {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-ruNjL9ptKp .counter-container {
+  color: #767676;
+}
+.cid-ruNjL9ptKp .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-ruNjL9ptKp .counter-container ul li {
+  margin-bottom: 1rem;
+}
 .cid-rkqwi0a3lm {
   padding-top: 30px;
   padding-bottom: 30px;
