Added Apprentice Cards

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3861,6 +3861,100 @@ section.lazy-placeholder:after {
 .cid-roiDZkpNfg .mbr-section-btn B {
   color: #271200;
 }
+.cid-rSzUtjTPum {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rSzUtjTPum P {
+  color: #767676;
+}
+.cid-rSzUtjTPum H1 {
+  color: #271200;
+}
+.cid-rSzUtUBCFV {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rSzUtUBCFV h2 {
+  text-align: left;
+}
+.cid-rSzUtUBCFV h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rSzUtUBCFV p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rSzUtUBCFV .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rSzUtUBCFV .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rSzUtUBCFV .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rSzUtUBCFV .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rSzUtUBCFV .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rSzUtUBCFV .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rSzUtUBCFV .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rSzUtUBCFV .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rSzUtUBCFV .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rSzUtUBCFV B {
+  color: #271200;
+}
+.cid-rSzUtUBCFV H4 {
+  color: #271200;
+}
+.cid-rSzUtUBCFV P {
+  color: #271200;
+}
+.cid-rSzUuu9MpW {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rSzUuu9MpW P {
+  color: #767676;
+}
+.cid-rSzUuu9MpW .mbr-text,
+.cid-rSzUuu9MpW .mbr-section-btn B {
+  color: #271200;
+}
 .cid-rkkAhIV2Zj .navbar {
   background: #ffffff;
   transition: none;
